<resources>
    <string name="app_name">SkyRider</string>
    <string name="playButton">Play</string>
    <string name="highScore">High Score</string>
    <string name="StartGame">Login</string>
    <string name="textUser">Login Here</string>
    <string name="userId" />
    <string name="userPassword" />
    <string name="Register">SIgnUp</string>
    <string name="userNameR">Mobile Number</string>
    <string name="EnterInput" />
    <string name="FullName">User Name</string>
    <string name="FullNAme" />
    <string name="Password">Password </string>
    <string name="passwordInput" />
    <string name="ShowDetails">Log Out</string>
    <string name="Profile_text">Profile</string>
    <string name="button">Button</string>
    <string name="getDetails">My Data</string>
    <string name="acount">Account</string>
    <string name="game">Play</string>
    <string name="delete">Deactivate</string>
    <string name="upuser">Update</string>
    <string name="upmoob">Update_Mobile</string>
    <string name="changName">Update Name</string>
    <string name="userup">User Update</string>
    <string name="back">Profile</string>>
</resources>