<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="TODO"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:layout_above="@+id/play"
        android:id="@+id/Name"
        android:textSize="48sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="64sp"
        android:text="@string/playButton"
        android:layout_centerInParent="true"
        android:textColor="#000000"
        android:id="@+id/play"

        />

    <TextView
        android:id="@+id/highScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Name"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="45dp"
        android:text="@string/highScore"
        android:textColor="#000000"
        android:textSize="24sp" />

    <ImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_baseline_volume_up_24"
        android:id="@+id/volumControl"

        />

</RelativeLayout>